# smartconfig

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: publish-documentation.yaml  run-tests.yaml
docs/: config.json  example.json
docs/source/: api.rst  concepts.rst  conf.py  configurations.rst  converters.rst  custom_converters.rst  custom_filters.rst  custom_functions.rst  default_converters.rst  default_functions.rst  exceptions.rst  external_variables.rst  functions.rst  index.rst  parsers.rst  prototypes.rst  recipes.rst  resolution.rst  resolution_in_detail.rst  resolve.rst  schemas.rst  type_preservation.rst  types.rst
docs/source/_static/: custom.css  mermaid_theme_fix.js
src/smartconfig/: __init__.py  _core_functions.py  _internals.py  _prototypes.py  _resolve.py  _schemas.py  _utils.py  converters.py  exceptions.py  functions.py  parsers.py  types.py
src/smartconfig/stdlib/: __init__.py  datetime.py  dict.py  list.py
tests/: test_converters.py  test_core_functions.py  test_functions.py  test_jinja.py  test_parsers.py  test_prototypes.py  test_resolve.py  test_validate_schema.py
tests/test_prototypes/: test_as_dict.py  test_definition.py  test_equality.py  test_from_dict.py  test_init.py  test_is_prototype_class.py  test_repr.py  test_round_trip.py  test_schema.py
tests/test_resolve/: test_any_type.py  test_basic_resolution.py  test_dynamic_schemas.py  test_error_messages.py  test_filters.py  test_function_calls.py  test_global_variables.py  test_inject_root.py  test_interpolation.py  test_nullable.py  test_prototype_resolution.py  test_type_conversion.py  test_unresolved_containers.py
tests/test_stdlib/: test_datetime.py  test_dict.py  test_list.py
