[project]
name = "smartconfig"
version = "0.1.0"
description = "Add smart functionality to configuration files."
readme = "README.md"
authors = [
    { name = "Justin Eldridge", email = "eldridgejm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "sphinx>=8.1.3",
    "sphinxawesome-theme>=5.3.2",
]
